--- a/views/about/index.html
+++ b/views/about/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <style>
+      h2 {
+        font-size: 0.9em;
+        font-style: italic;
+      }
+    </style>
   </head>
   <body>
     <!-- Navar -->
@@ -43,10 +49,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light" href="/about"
-                >About</a
-              >
-            </li>
+                <a class="nav-link active text-light" href="/about"
+                  >About</a
+                >
+              </li>
           </ul>
         </div>
       </div>
@@ -54,28 +60,10 @@
     <!-- End of Navbar -->
 
     <div class="container mt-3">
-      <div class="row d-flex justify-content-center">
-        <div class="col-4">
-          <h2>Add Category</h2>
-          <hr />
-
-          <form action="/categories/add" method="POST">
-            <div class="mb-3">
-              <label class="form-label">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                name="name"
-                autocomplete="off"
-              />
-            </div>
-            <div class="float-end">
-              <a href="/categories" class="btn btn-secondary">Back</a>
-              <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-          </form>
-        </div>
-      </div>
+      <h1>Go final Project - Framework Based Programming - ITS</h1>
+      <br>
+      <h2>Radian Try Darmawan - 5025221097</h2>
+      <h2>Albin Maurice Pierre Tardivel - 5999241037</h2>
     </div>
   </body>
 </html>
