--- a/views/product/create.html
+++ b/views/product/create.html
@@ -42,6 +42,11 @@
                 >Categories</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light" href="/about"
+                >About</a
+              >
+            </li>
           </ul>
         </div>
       </div>
