--- a/views/category/edit.html
+++ b/views/category/edit.html
@@ -15,6 +15,11 @@
     <!-- Navar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
+        <li class="nav-item">
+          <a href="https://www.its.ac.id/" target="_blank" class="nav-link">
+            <img src="https://www.its.ac.id/wp-content/uploads/2019/02/Logo-its-biru-transparan.png" alt="ITS_logo" style="width: 50px; height: 30px;">
+          </a>
+        </li>
         <a class="navbar-brand text-light" href="/">Go Products</a>
         <button
           class="navbar-toggler"
