--- a/views/product/index.html
+++ b/views/product/index.html
@@ -66,6 +66,7 @@
         <thead>
           <tr>
             <th>Name</th>
+            <th>Description</th>
             <th>Category</th>
             <th>Stock</th>
             <th>Action</th>
@@ -75,6 +76,7 @@
           {{range .products}}
           <tr>
             <td>{{.Name}}</td>
+            <td>{{.Description}}</td>
             <td>{{.Category.Name}}</td>
             <td>{{.Stock}}</td>
             <td>
