--- a/views/about/index.html
+++ b/views/about/index.html
@@ -26,7 +26,7 @@
               <img src="https://www.its.ac.id/wp-content/uploads/2019/02/Logo-its-biru-transparan.png" alt="ITS_logo" style="width: 50px; height: 30px;">
             </a>
           </li>
-        <a class="navbar-brand text-light" href="/">Go Products</a>
+        <a class="navbar-brand text-light" href="/">All Products</a>
         <button
           class="navbar-toggler"
           type="button"
