--- a/views/home/home_detail.html
+++ b/views/home/home_detail.html
@@ -10,6 +10,26 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <style>
+        body {
+            background-color: #121212 !important;
+            color: #ffffff !important;
+        }
+    
+        table {
+            color: #ffffff !important;
+        }
+    
+        .table td, .table th {
+            border-color: #404040 !important;
+            color: #ffffff !important;
+        }
+    
+        .card {
+            background-color: #1E1E1E !important;
+            color: #ffffff !important;
+        }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark">
