--- a/views/home/home_index.html
+++ b/views/home/home_index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <style>
+      body {
+        background-color: #121212 !important;
+        color: #ffffff !important;
+      }
       .out-of-stock {
         background-color: #a8a8a8;
       }
