--- a/views/product/product_edit.html
+++ b/views/product/product_edit.html
@@ -1,18 +1,39 @@
+{{define "product_edit.html"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GO Products</title>
+    <title>GO Products - Edit</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+      <style>
+      body {
+          background-color: #121212 !important;
+          color: #ffffff !important;
+      }
+  
+      table {
+          color: #ffffff !important;
+      }
+  
+      .table td, .table th {
+          border-color: #404040 !important;
+          color: #ffffff !important;
+      }
+  
+      .card {
+          background-color: #1E1E1E !important;
+          color: #ffffff !important;
+      }
+    </style>
   </head>
   <body>
-    <!-- Navar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
         <li class="nav-item">
@@ -35,22 +56,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item pe-3">
-              <a
-                class="nav-link active text-light"
-                aria-current="page"
-                href="/products"
-                >Products</a
-              >
+              <a class="nav-link active text-light" aria-current="page" href="/products">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light" href="/categories"
-                >Categories</a
-              >
+              <a class="nav-link active text-light" href="/categories">Categories</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-light" href="/about"
-                >About</a
-              >
+              <a class="nav-link active text-light" href="/about">About</a>
             </li>
           </ul>
         </div>
@@ -65,20 +77,24 @@
           <hr />
 
           <form action="/products/edit" method="POST">
-            <input type="hidden" name="id" value="{{ .product.Id }}" />
+            <input type="hidden" name="id" value="{{.product.Id}}" />
             <div class="mb-3">
               <label class="form-label">Name</label>
               <input
                 type="text"
                 class="form-control"
                 name="name"
-                value="{{ .product.Name}}"
+                value="{{.product.Name}}"
+                required
               />
             </div>
             <div class="mb-3">
-              <select class="form-select" name="category_id">
+              <label class="form-label">Category</label>
+              <select class="form-select" name="category_id" required>
                 {{range .categories}}
-                <option value="{{ .Id}}">{{ .Name }}</option>
+                <option value="{{.Id}}" {{if eq .Id $.product.Category.Id}}selected{{end}}>
+                  {{.Name}}
+                </option>
                 {{end}}
               </select>
             </div>
@@ -88,15 +104,14 @@
                 type="number"
                 class="form-control"
                 name="stock"
-                value="{{ .product.Stock}}"
+                value="{{.product.Stock}}"
                 autocomplete="off"
+                required
               />
             </div>
             <div class="mb-3">
               <label class="form-label">Description</label>
-              <textarea class="form-control" name="description" rows="3">
-{{ .product.Description}}</textarea
-              >
+              <textarea class="form-control" name="description" rows="3" required>{{- .product.Description -}}</textarea>
             </div>
             <div class="float-end">
               <a href="/products" class="btn btn-secondary">Back</a>
@@ -106,5 +121,8 @@
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+{{end}}
